-Added a [b]Refining Concern[/b] company, providing buffs to Oil Refineries, Sugar Substitute Factories and Synthetic Plants.
-Reworked Machine Parts Factories, added 2 new PMs - Simplified Machines and Compact Machines. Can now be produced without Copper.
-Added an option to produce Artillery without Copper using 2 new PMs (less efficiently than WITH)
[h2]Tweaks[/h2]
-Electricity is now a non-local trade good.
-Output shortage penalty now comes if any input good is 30% above base price, rather than 50%.
-Oil Streetlights PM now provides infrastructure.
-Nerfed [b]Promote Social Mobility[/b] decree, but reduced authority cost.
-Reworked Electric Streetlights PM.
-Halved Barracks construction cost.
-Increased base max Road Network level by 1.
-Increased base tech spread from 25 to 40.
-Increased university innovation output.
-Added -10% enactment time to [b]Identification Documents[/b] tech.
-Reduced employment of officers for earlier training methods.
-Publicly Traded PM for [b]Distilleries[/b] is available with Pot Stills PM, not only Patent.
-Combustion Engine Derricks PM now uses Fuel instead of Crude Oil.
-Wine production for Distilleries is available without tech requirements.

[h1]v10.5[/h1]
-Fixed high-speed diesel trains needed electricity and didn't produce pollution.
-Fixed "Full Chemical Treatment" PM for Lumber Mills could be activated without state electricity supply.
-Fixed Lumber Mills couldn't auto-expand.
-Moved "Patent Stills" PM from Crystal Glass tech to Shift Work tech.
-Fixed forestry ownership PMG localization.
-Fixed AI would not research Gravel Roads tech.

[h1]v10.4[/h1]
-Added machine parts and copper priorities to AI strategies. This [i]should[/i] make AI build them more.
-Reduced low SoL negative impact on capitalist/aristocrat qualifications.
-Buffed Lumber Mills
-Fixed various russian localization issues
-Fixed no localization for fuel input multiplier