@@ -133,20 +133,22 @@ pmg_secondary_building_lumber_mill = {
 	}
 }
 
-pmg_base_oil_refinery = {
+pmg_distillation_fuel = {
 	texture = "gfx/interface/icons/generic_icons/mixed_icon_base.dds"
 	production_methods = {
 		pm_oil_distillation
+		pm_synthetic_diversion
+		pm_synthetic_oil
 		pm_thermal_cracking
 	}
 }
+
 
 pmg_petcoke = {
 	texture = "gfx/interface/icons/generic_icons/mixed_icon_refining.dds"
 	production_methods = {
 		pm_no_petcoke
 		pm_petcoke
-		pm_coal_liquefaction
 	}
 }
 
