@@ -14,7 +14,8 @@ pm_oil_distillation = {
 			goods_input_electricity_add = 10	# 300	# TOTAL 2300
 
 			# output goods
-			goods_output_fuel_add = 65			# 3250 # PROFIT 950
+			goods_output_fuel_add = 65			# 3250 
+			goods_output_sulfur_add = 5			# 250 # TOTAL 3500 # PROFIT 1200
 		}
 
 		level_scaled = {
@@ -26,6 +27,68 @@ pm_oil_distillation = {
 	}
 }
 
+pm_synthetic_diversion = {
+	texture = "gfx/interface/icons/production_method_icons/ammonia_soda_process.dds"
+	
+	unlocking_technologies = {
+		synthetic_rubber
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_oil_add = 30			# 1200
+			goods_input_coal_add = 30			# 900
+			goods_input_electricity_add = 15	# 450	# TOTAL 2550
+
+			# output goods
+			goods_output_fuel_add = 80			# 4000
+			goods_output_sulfur_add = 5			# 250 # TOTAL 4250 # PROFIT 1950
+		}
+
+		level_scaled = {
+			# employment
+			building_employment_laborers_add = 1000
+			building_employment_machinists_add = 2500
+			building_employment_engineers_add = 1000
+		}
+		
+		unscaled = {
+			building_throughput_add = -0.1
+		}
+	}
+}
+
+pm_synthetic_oil = {
+	texture = "gfx/interface/icons/production_method_icons/synthetic_dyes.dds"
+	
+	unlocking_technologies = {
+		oil_turbine
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_coal_add = 60			# 1800
+			goods_input_fertilizer_add = 5		# 150
+			goods_input_electricity_add = 15	# 450	# TOTAL 2400
+
+			# output goods
+			goods_output_fuel_add = 80			# 4000	# PROFIT 1600
+		}
+
+		level_scaled = {
+			# employment
+			building_employment_laborers_add = 1000
+			building_employment_machinists_add = 2000
+			building_employment_engineers_add = 1500
+		}
+		
+		unscaled = {
+			building_throughput_add = -0.05
+		}
+	}
+}
 pm_thermal_cracking = {
 	texture = "gfx/interface/icons/production_method_icons/vaccum_evaporation.dds"
 	state_modifiers = {
@@ -45,8 +108,8 @@ pm_thermal_cracking = {
 			goods_input_electricity_add = 15	# 450	# TOTAL 2850
 
 			# output goods
-			goods_output_fuel_add = 80			# 4000 
-			goods_output_sulfur_add = 10		# 500 # TOTAL 4500 # PROFIT 1650
+			goods_output_fuel_add = 90			# 4500 
+			goods_output_sulfur_add = 10		# 500 # TOTAL 5000 # PROFIT 2150
 		}
 
 		level_scaled = {
@@ -90,9 +153,9 @@ pm_extensive_plastic_production = {
 
 	building_modifiers = {
 		workforce_scaled = {
-			goods_output_fuel_add = -50
+			goods_output_fuel_add = -40
 
-			goods_output_plastics_add = 50	# NO PROFIT
+			goods_output_plastics_add = 40	# NO PROFIT
 		}
 	}
 }
@@ -100,7 +163,13 @@ pm_extensive_plastic_production = {
 pm_plastic_focus = {
 	texture = "gfx/interface/icons/production_method_icons/plastics_focus.dds"
 
+	unlocking_technologies = {
+		plastics
+	}
+	
 	unlocking_production_methods = {
+		pm_synthetic_diversion
+		pm_synthetic_oil
 		pm_thermal_cracking
 	}
 
@@ -109,48 +178,6 @@ pm_plastic_focus = {
 			goods_output_fuel_add = -70
 
 			goods_output_plastics_add = 70	# NO PROFIT
-		}
-	}
-}
-
-### PETCOKE
-
-pm_no_petcoke = {
-	texture = "gfx/interface/icons/production_method_icons/no_petcoke.dds"
-	
-}
-
-pm_petcoke = {
-	texture = "gfx/interface/icons/production_method_icons/petcoke.dds"
-	
-	unlocking_technologies = {
-		steam_turbine
-	}
-
-	building_modifiers = {
-		workforce_scaled = {
-			goods_output_fuel_add = -25	# 1500
-
-			goods_output_coal_add = 50	# 1500	# NO PROFIT
-		}
-	}
-}
-
-pm_coal_liquefaction = {
-	texture = "gfx/interface/icons/production_method_icons/coal_liquefaction.dds"
-	
-	unlocking_technologies = {
-		common_synthetic_polymers
-	}
-	
-	unlocking_production_methods = {
-		pm_thermal_cracking
-	}
-
-	building_modifiers = {
-		workforce_scaled = {
-			goods_input_oil_add = -27	# 1080
-			goods_input_coal_add = 36	# 1080	# NO PROFIT
 		}
 	}
 }
