@@ -12,6 +12,7 @@ Owner pops employed in military factories (arty, small arms, munitions, shipyard
 -Added a [b]Refining Concern[/b] company, providing buffs to Oil Refineries, Sugar Substitute Factories and Synthetic Plants.
 -Reworked Machine Parts Factories, added 2 new PMs - Simplified Machines and Compact Machines. Can now be produced without Copper.
 -Added an option to produce Artillery without Copper using 2 new PMs (less efficiently than WITH)
+-Oil Refineries now have option to produce synthetic oil only.
 [h2]Tweaks[/h2]
 -Electricity is now a non-local trade good.
 -Output shortage penalty now comes if any input good is 30% above base price, rather than 50%.
@@ -27,6 +28,8 @@ Owner pops employed in military factories (arty, small arms, munitions, shipyard
 -Publicly Traded PM for [b]Distilleries[/b] is available with Pot Stills PM, not only Patent.
 -Combustion Engine Derricks PM now uses Fuel instead of Crude Oil.
 -Wine production for Distilleries is available without tech requirements.
+
+-Removed Petcoke for Oil Refineries
 
 [h1]v10.5[/h1]
 -Fixed high-speed diesel trains needed electricity and didn't produce pollution.
